--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Arranchamento</title>
+    <title>Formulário de Solicitação</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h2>Formulário de Arranchamento</h2>
+        <h2>Formulário de Solicitação</h2>
         <form id="requestForm">
             <label for="posto">Posto de Graduação:</label>
             <select id="posto" name="posto">
-                <option value="Cabo">Cabo</option>
-                <option value="Soldado">Soldado</option>
-                <option value="Efetivo Variável">Efetivo Variavel</option>
+                <option value="cabo">Cabo</option>
+                <option value="sargento">Sargento</option>
+                <option value="tenente">Tenente</option>
+                <option value="capitao">Capitão</option>
             </select><br><br>
 
             <label for="nome">Nome:</label>
