--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Solicitação</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script> <!-- Use defer para garantir que o script seja carregado após a renderização do DOM -->
 </head>
 <body>
     <div class="container">
@@ -27,7 +28,5 @@
             <button type="button" onclick="salvarSolicitacao()">Enviar</button>
         </form>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
