--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Arranchamento</title>
+    <title>Formulário de Solicitação</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h2>Formulário de Arranchamento</h2>
-        <form id="requestForm">
-            <label for="posto">Posto de Graduação:</label>
-            <select id="posto" name="posto">
-                <option value="Cabo">Cabo</option>
-                <option value="Soldado">Soldado</option>
-                <option value="Efetivo Variável">Efetivo Variável</option>
-            </select><br><br>
+    <form id="requestForm">
+        <label for="posto">Posto de Graduação:</label>
+        <input type="text" id="posto" name="posto" required>
 
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required><br><br>
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required>
 
-            <label for="solicitacao">Solicitação:</label><br>
-            <textarea id="solicitacao" name="solicitacao" rows="4" cols="50" required></textarea><br><br>
+        <label for="solicitacao">Solicitação:</label>
+        <textarea id="solicitacao" name="solicitacao" rows="4" required></textarea>
 
-           <button type="button" onclick="salvarSolicitacao()">Enviar</button>
-        </form>
-    </div>
-
-    <script src="script.js"></script>
+        <button type="button" onclick="salvarSolicitacao()">Enviar</button>
+    </form>
 </body>
 </html>
