--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Template</title>
+    <title>CURRÍCULO DIGITAL</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,26 +13,31 @@
                 <img src="profile.jpg" alt="Profile Photo">
             </div>
             <div class="name-title">
-                <h1>MICHEL PETERSON</h1>
-                <p>Professional Title</p>
+                <h1>ARTHUR H. T. MAICA</h1>
+                <p>3º Sargento Técnico</p>
             </div>
         </div>
         <div class="content">
             <div class="left-column">
                 <div class="section">
                     <h2>Contact</h2>
-                    <p>17th Vibe City, Bingo Street<br>New York City, USA</p>
-                    <p>Phone: 0100-123-456789<br>Email: youremail@email.com<br>Web: www.yourweb.com</p>
-                    <p>Facebook: /yourname<br>LinkedIn: /yourname</p>
+                    <p>14h Santa Rosa<br>Rio Grande do SUL, BR</p>
+                    <p>Telefone: (55) 99971-7822<br>Email: arthurmaicaa@gmail.com</p>
+                    <p>Instagram: /@arthurmaica<br>
                 </div>
                 <div class="section">
-                    <h2>Education</h2>
-                    <p>Your Degree / Major<br>Name of the University / Location<br>Year: 2015-2017</p>
-                    <p>Your Degree / Major<br>Name of the University / Location<br>Year: 2015-2017</p>
+                    <h2>Educação</h2>
+                    <p>Técnico / Instituto Federal Farroupilha<br>Iffar / Santa Rosa<br>Year: 2019-2021</p>
+                    <p>Superior Incompleto / Sociedade Educacional de Três de Maio <br>SETREM / Três de Maio<br>Year: 2023-Atualmente</p>
                 </div>
                 <div class="section">
-                    <h2>Expertise</h2>
-                    <p>Graphic Design</p>
+                    <h2>Habilidades</h2>
+                    <p>Topografia</p>
+                    <p>Construção Civil</p>
+                    <p>Gestão de Pessoas</p>
+                    <p>Gerenciamento e Projeto</p>
+                    <p>Design Gráfico</p>
+                    <p>Web Design</p>
                 </div>
             </div>
             <div class="right-column">
@@ -41,9 +46,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
                 </div>
                 <div class="section">
-                    <h2>Work Experience</h2>
-                    <p>2023 - Present<br>SEO / Graphic Designer / Company Name / Location<br>Lorem ipsum dolor sit amet...</p>
-                    <p>2020 - 2022<br>SEO / Graphic Designer / Company Name / Location<br>Lorem ipsum dolor sit amet...</p>
+                    <h2>Experiência</h2>
+                    <p>2023 - Atualmente<br>3º Sargento / Técnico Especialista / Exercito Brasileiro / 19ºRC Mec</p>
+                    <p>2020 - 2021<br>Estagiário / Projetista / Aero Toporafia / Santa Rosa</p>
                 </div>
             </div>
         </div>
