--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
                     <p>Gerenciamento e Projeto</p>
                     <p>Design Gráfico</p>
                     <p>Web Design</p>
+                    <p>Inglês</p>
                 </div>
             </div>
             <div class="right-column">
                 <div class="section">
                     <h2>Profile</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                    <p>Sou um profissional dedicado, com 4 anos de experiência na área de projetos. Minha carreira começou com o interesse pela construção civil, o que me levou a buscar uma formação técnica e educação de qualidade em uma instituição federal. Ao longo dos anos, refinei minhas habilidades trabalhando em projetos topográficos e arquitetônicos, primeiramente no meio civil e atualmente como militar técnico.
+
+Meu objetivo é sempre combinar criatividade e empenho com técnica para suprir as demandas do cotidiano, realizando projetos que atendam às necessidades e objetivos dos meus superiores. Sou detalhista, proativo e dedicado ao rendimento da minha equipe, acreditando que a colaboração é a chave para resultados excepcionais. Estou constantemente buscando aprender novas técnicas para me manter atualizado no campo dinâmico da construção civil.</p>
                 </div>
                 <div class="section">
                     <h2>Experiência</h2>
