--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         <div class="content">
             <div class="left-column">
                 <div class="section">
-                    <h2>Contact</h2>
+                    <h2>Contato</h2>
                     <p>14h Santa Rosa<br>Rio Grande do SUL, BR</p>
                     <p>Telefone: (55) 99971-7822<br>Email: arthurmaicaa@gmail.com</p>
                     <p>Instagram: /@arthurmaica<br>
                 </div>
                 <div class="section">
                     <h2>Educação</h2>
-                    <p>Técnico / Instituto Federal Farroupilha<br>Iffar / Santa Rosa<br>Year: 2019-2021</p>
-                    <p>Superior Incompleto / Sociedade Educacional de Três de Maio <br>SETREM / Três de Maio<br>Year: 2023-Atualmente</p>
+                    <p>EnsinoTécnico / Instituto Federal Farroupilha<br>Iffar / Santa Rosa<br>Ano: 2019-2021</p>
+                    <p>Superior Incompleto / Sociedade Educacional de Três de Maio <br>SETREM / Três de Maio<br>Ano: 2023-Atualmente</p>
                 </div>
                 <div class="section">
                     <h2>Habilidades</h2>
@@ -44,7 +44,7 @@
             </div>
             <div class="right-column">
                 <div class="section">
-                    <h2>Profile</h2>
+                    <h2>Perfil</h2>
                     <p>Sou um profissional dedicado, com 4 anos de experiência na área de projetos. Minha carreira começou com o interesse pela construção civil, o que me levou a buscar uma formação técnica e educação de qualidade em uma instituição federal. Ao longo dos anos, refinei minhas habilidades trabalhando em projetos topográficos e arquitetônicos, primeiramente no meio civil e atualmente como militar técnico.
 
 Meu objetivo é sempre combinar criatividade e empenho com técnica para suprir as demandas do cotidiano, realizando projetos que atendam às necessidades e objetivos dos meus superiores. Sou detalhista, proativo e dedicado ao rendimento da minha equipe, acreditando que a colaboração é a chave para resultados excepcionais. Estou constantemente buscando aprender novas técnicas para me manter atualizado no campo dinâmico da construção civil.</p>
