--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,35 +23,36 @@
                     <h2>Contato</h2>
                     <p>14h Santa Rosa<br>Rio Grande do SUL, BR</p>
                     <p>Telefone: (55) 99971-7822<br>Email: arthurmaicaa@gmail.com</p>
-                    <p>Instagram: /@arthurmaica<br>
+                    <p>Instagram: /@arthurmaica<br></p>
                 </div>
                 <div class="section">
                     <h2>Educação</h2>
-                    <p>EnsinoTécnico / Instituto Federal Farroupilha<br>Iffar / Santa Rosa<br>Ano: 2019-2021</p>
-                    <p>Superior Incompleto / Sociedade Educacional de Três de Maio <br>SETREM / Três de Maio<br>Ano: 2023-Atualmente</p>
+                    <p>Ensino Técnico / Instituto Federal Farroupilha<br>Iffar / Santa Rosa<br>Ano: 2019-2021</p>
+                    <p>Superior Incompleto / Sociedade Educacional de Três de Maio<br>SETREM / Três de Maio<br>Ano: 2023-Atualmente</p>
                 </div>
                 <div class="section">
                     <h2>Habilidades</h2>
-                    <p>Topografia</p>
-                    <p>Construção Civil</p>
-                    <p>Gestão de Pessoas</p>
-                    <p>Gerenciamento e Projeto</p>
-                    <p>Design Gráfico</p>
-                    <p>Web Design</p>
-                    <p>Inglês</p>
+                    <ul>
+                        <li>Topografia</li>
+                        <li>Construção Civil</li>
+                        <li>Gestão de Pessoas</li>
+                        <li>Gerenciamento e Projeto</li>
+                        <li>Design Gráfico</li>
+                        <li>Web Design</li>
+                        <li>Inglês</li>
+                    </ul>
                 </div>
             </div>
             <div class="right-column">
                 <div class="section">
                     <h2>Perfil</h2>
-                    <p>Sou um profissional dedicado, com 4 anos de experiência na área de projetos. Minha carreira começou com o interesse pela construção civil, o que me levou a buscar uma formação técnica e educação de qualidade em uma instituição federal. Ao longo dos anos, refinei minhas habilidades trabalhando em projetos topográficos e arquitetônicos, primeiramente no meio civil e atualmente como militar técnico.
-
-Meu objetivo é sempre combinar criatividade e empenho com técnica para suprir as demandas do cotidiano, realizando projetos que atendam às necessidades e objetivos dos meus superiores. Sou detalhista, proativo e dedicado ao rendimento da minha equipe, acreditando que a colaboração é a chave para resultados excepcionais. Estou constantemente buscando aprender novas técnicas para me manter atualizado no campo dinâmico da construção civil.</p>
+                    <p>Sou um profissional dedicado, com 4 anos de experiência na área de projetos. Minha carreira começou com o interesse pela construção civil, o que me levou a buscar uma formação técnica e educação de qualidade em uma instituição federal. Ao longo dos anos, refinei minhas habilidades trabalhando em projetos topográficos e arquitetônicos, primeiramente no meio civil e atualmente como militar técnico.</p>
+                    <p>Meu objetivo é sempre combinar criatividade e empenho com técnica para suprir as demandas do cotidiano, realizando projetos que atendam às necessidades e objetivos dos meus superiores. Sou detalhista, proativo e dedicado ao rendimento da minha equipe, acreditando que a colaboração é a chave para resultados excepcionais. Estou constantemente buscando aprender novas técnicas para me manter atualizado no campo dinâmico da construção civil.</p>
                 </div>
                 <div class="section">
                     <h2>Experiência</h2>
                     <p>2023 - Atualmente<br>3º Sargento / Técnico Especialista / Exercito Brasileiro / 19ºRC Mec</p>
-                    <p>2020 - 2021<br>Estagiário / Projetista / Aero Toporafia / Santa Rosa</p>
+                    <p>2020 - 2021<br>Estagiário / Projetista / Aero Topografia / Santa Rosa</p>
                 </div>
             </div>
         </div>
