--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="photo">
-                <img src="profile.jpg" alt="Profile Photo">
+                <img src="file.jpg" alt="Profile Photo">
             </div>
             <div class="name-title">
                 <h1>ARTHUR H. T. MAICA</h1>
