--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="photo">
-                <img src="imagem.jpg" alt="Profile Photo">
+                <img src="file.jpg" alt="Profile Photo">
             </div>
             <div class="name-title">
                 <h1>ARTHUR H. T. MAICA</h1>
@@ -21,9 +21,9 @@
             <div class="left-column">
                 <div class="section">
                     <h2>Contato</h2>
-                    <p>14h Santa Rosa<br>Rio Grande do SUL, BR</p>
+                    <p>14h Santa Rosa<br>Rio Grande do Sul, BR</p>
                     <p>Telefone: (55) 99971-7822<br>Email: arthurmaicaa@gmail.com</p>
-                    <p>Instagram: /@arthurmaica<br></p>
+                    <p>Instagram: @arthurmaicaa<br></p>
                 </div>
                 <div class="section">
                     <h2>Educação</h2>
